--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "icoutils-rs"
 version = "0.1.0"
 edition = "2024"
+license = "MIT"
+description = "Drop-in replacement of `icotool` from `icoutils`, implemented in Rust."
+readme = "README.md"
+repository = "https://github.com/BLumia/icoutils-rs"
+categories = ["command-line-utilities"]
+rust-version = "1.85.0"
 
 [[bin]]
 name = "icotool"
